Revert to 1.4 style usage